@@ -1,232 +1,0 @@
-#! /bin/sh
-# Generated automatically by configure.
-# Run this file to recreate the current configuration.
-# This directory was configured as follows,
-# on host akira:
-#
-# ./configure 
-#
-# Compiler output produced by configure, useful for debugging
-# configure, is in ./config.log if it exists.
-
-ac_cs_usage="Usage: ./config.status [--recheck] [--version] [--help]"
-for ac_option
-do
-  case "$ac_option" in
-  -recheck | --recheck | --rechec | --reche | --rech | --rec | --re | --r)
-    echo "running ${CONFIG_SHELL-/bin/sh} ./configure  --no-create --no-recursion"
-    exec ${CONFIG_SHELL-/bin/sh} ./configure  --no-create --no-recursion ;;
-  -version | --version | --versio | --versi | --vers | --ver | --ve | --v)
-    echo "./config.status generated by autoconf version 2.13"
-    exit 0 ;;
-  -help | --help | --hel | --he | --h)
-    echo "$ac_cs_usage"; exit 0 ;;
-  *) echo "$ac_cs_usage"; exit 1 ;;
-  esac
-done
-
-ac_given_srcdir=.
-ac_given_INSTALL="/usr/bin/ginstall -c"
-
-trap 'rm -fr Makefile
-	   src/Makefile
-           sounds/Makefile
-           pixmaps/Makefile
-           libfaim/Makefile
-           doc/Makefile
-           m4/Makefile
-           conftest*; exit 1' 1 2 15
-
-# Protect against being on the right side of a sed subst in config.status.
-sed 's/%@/@@/; s/@%/@@/; s/%g$/@g/; /@g$/s/[\\&%]/\\&/g;
- s/@@/%@/; s/@@/@%/; s/@g$/%g/' > conftest.subs <<\CEOF
-/^[ 	]*VPATH[ 	]*=[^:]*$/d
-
-s%@SHELL@%/bin/sh%g
-s%@CFLAGS@%-g -O2 -I/usr/local/include -I/opt/include%g
-s%@CPPFLAGS@%%g
-s%@CXXFLAGS@%%g
-s%@FFLAGS@%%g
-s%@DEFS@% -DPACKAGE=\"gaim\" -DVERSION=\"0.9.11\" -DSTDC_HEADERS=1 -DHAVE_SYS_WAIT_H=1 -DHAVE_FCNTL_H=1 -DHAVE_SYS_TIME_H=1 -DHAVE_UNISTD_H=1 -DRETSIGTYPE=void -DHAVE_STRFTIME=1 -DHAVE_SOCKET=1 -DHAVE_STRDUP=1 -DHAVE_STRSTR=1 -DHAVE_ATEXIT=1 %g
-s%@LDFLAGS@%%g
-s%@LIBS@%%g
-s%@exec_prefix@%${prefix}%g
-s%@prefix@%/usr/local%g
-s%@program_transform_name@%s,x,x,%g
-s%@bindir@%${exec_prefix}/bin%g
-s%@sbindir@%${exec_prefix}/sbin%g
-s%@libexecdir@%${exec_prefix}/libexec%g
-s%@datadir@%${prefix}/share%g
-s%@sysconfdir@%${prefix}/etc%g
-s%@sharedstatedir@%${prefix}/com%g
-s%@localstatedir@%${prefix}/var%g
-s%@libdir@%${exec_prefix}/lib%g
-s%@includedir@%${prefix}/include%g
-s%@oldincludedir@%/usr/include%g
-s%@infodir@%${prefix}/info%g
-s%@mandir@%${prefix}/man%g
-s%@INSTALL_PROGRAM@%${INSTALL}%g
-s%@INSTALL_SCRIPT@%${INSTALL_PROGRAM}%g
-s%@INSTALL_DATA@%${INSTALL} -m 644%g
-s%@PACKAGE@%gaim%g
-s%@VERSION@%0.9.11%g
-s%@ACLOCAL@%aclocal%g
-s%@AUTOCONF@%autoconf%g
-s%@AUTOMAKE@%automake%g
-s%@AUTOHEADER@%autoheader%g
-s%@MAKEINFO@%makeinfo%g
-s%@SET_MAKE@%%g
-s%@host@%i686-pc-linux-gnu%g
-s%@host_alias@%i686-pc-linux-gnu%g
-s%@host_cpu@%i686%g
-s%@host_vendor@%pc%g
-s%@host_os@%linux-gnu%g
-s%@build@%i686-pc-linux-gnu%g
-s%@build_alias@%i686-pc-linux-gnu%g
-s%@build_cpu@%i686%g
-s%@build_vendor@%pc%g
-s%@build_os@%linux-gnu%g
-s%@RANLIB@%ranlib%g
-s%@CC@%gcc%g
-s%@LD@%/usr/i386-slackware-linux/bin/ld%g
-s%@NM@%/usr/bin/nm -B%g
-s%@LN_S@%ln -s%g
-s%@LIBTOOL@%$(SHELL) $(top_builddir)/libtool%g
-s%@CPP@%gcc -E%g
-s%@GNOME_LIBS@%%g
-s%@GNOMEUI_LIBS@%%g
-s%@GNOMEGNORBA_LIBS@%%g
-s%@GTKXMHTML_LIBS@%%g
-s%@ZVT_LIBS@%%g
-s%@GNOME_LIBDIR@%%g
-s%@GNOME_INCLUDEDIR@%%g
-s%@GNOME_CONFIG@%%g
-s%@ORBIT_CONFIG@%%g
-s%@ORBIT_IDL@%%g
-s%@HAVE_ORBIT_TRUE@%%g
-s%@HAVE_ORBIT_FALSE@%%g
-s%@ORBIT_CFLAGS@%%g
-s%@ORBIT_LIBS@%%g
-s%@HAVE_GNORBA_TRUE@%%g
-s%@HAVE_GNORBA_FALSE@%%g
-s%@GNORBA_CFLAGS@%%g
-s%@GNORBA_LIBS@%%g
-s%@GNOME_APPLETS_LIBS@%%g
-s%@GNOME_CAPPLET_LIBS@%%g
-s%@GTK_CONFIG@%/usr/bin/gtk-config%g
-s%@GTK_CFLAGS@%-I/usr/X11R6/include -I/usr/lib/glib/include%g
-s%@GTK_LIBS@%-L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXext -lX11 -lm%g
-s%@XPM_LIBS@%%g
-s%@PTHREAD_LIB@%%g
-s%@GLIB_CONFIG@%/usr/bin/glib-config%g
-s%@GLIB_CFLAGS@%-I/usr/lib/glib/include%g
-s%@GLIB_LIBS@%-L/usr/lib -lglib%g
-s%@ESD_CONFIG@%/usr/bin/esd-config%g
-s%@ESD_CFLAGS@%%g
-s%@ESD_LIBS@%-L/usr/lib -lesd -laudiofile -lm%g
-s%@GAIM_CFLAGS@%-g -O2 -I/usr/local/include -I/opt/include -I../ -I/usr/X11R6/include -I/usr/lib/glib/include  -DESD_SOUND%g
-s%@GAIM_LIBS@% -L/usr/lib -L/usr/X11R6/lib -lgtk -lgdk -rdynamic -lgmodule -lglib -ldl -lXext -lX11 -lm -L/usr/lib -lesd -laudiofile -lm%g
-s%@GAIM_LDADD@%%g
-s%@LIBFAIM_DO@%%g
-
-CEOF
-
-# Split the substitutions into bite-sized pieces for seds with
-# small command number limits, like on Digital OSF/1 and HP-UX.
-ac_max_sed_cmds=90 # Maximum number of lines to put in a sed script.
-ac_file=1 # Number of current file.
-ac_beg=1 # First line for current file.
-ac_end=$ac_max_sed_cmds # Line after last line for current file.
-ac_more_lines=:
-ac_sed_cmds=""
-while $ac_more_lines; do
-  if test $ac_beg -gt 1; then
-    sed "1,${ac_beg}d; ${ac_end}q" conftest.subs > conftest.s$ac_file
-  else
-    sed "${ac_end}q" conftest.subs > conftest.s$ac_file
-  fi
-  if test ! -s conftest.s$ac_file; then
-    ac_more_lines=false
-    rm -f conftest.s$ac_file
-  else
-    if test -z "$ac_sed_cmds"; then
-      ac_sed_cmds="sed -f conftest.s$ac_file"
-    else
-      ac_sed_cmds="$ac_sed_cmds | sed -f conftest.s$ac_file"
-    fi
-    ac_file=`expr $ac_file + 1`
-    ac_beg=$ac_end
-    ac_end=`expr $ac_end + $ac_max_sed_cmds`
-  fi
-done
-if test -z "$ac_sed_cmds"; then
-  ac_sed_cmds=cat
-fi
-
-CONFIG_FILES=${CONFIG_FILES-"Makefile
-	   src/Makefile
-           sounds/Makefile
-           pixmaps/Makefile
-           libfaim/Makefile
-           doc/Makefile
-           m4/Makefile
-          "}
-for ac_file in .. $CONFIG_FILES; do if test "x$ac_file" != x..; then
-  # Support "outfile[:infile[:infile...]]", defaulting infile="outfile.in".
-  case "$ac_file" in
-  *:*) ac_file_in=`echo "$ac_file"|sed 's%[^:]*:%%'`
-       ac_file=`echo "$ac_file"|sed 's%:.*%%'` ;;
-  *) ac_file_in="${ac_file}.in" ;;
-  esac
-
-  # Adjust a relative srcdir, top_srcdir, and INSTALL for subdirectories.
-
-  # Remove last slash and all that follows it.  Not all systems have dirname.
-  ac_dir=`echo $ac_file|sed 's%/[^/][^/]*$%%'`
-  if test "$ac_dir" != "$ac_file" && test "$ac_dir" != .; then
-    # The file is in a subdirectory.
-    test ! -d "$ac_dir" && mkdir "$ac_dir"
-    ac_dir_suffix="/`echo $ac_dir|sed 's%^\./%%'`"
-    # A "../" for each directory in $ac_dir_suffix.
-    ac_dots=`echo $ac_dir_suffix|sed 's%/[^/]*%../%g'`
-  else
-    ac_dir_suffix= ac_dots=
-  fi
-
-  case "$ac_given_srcdir" in
-  .)  srcdir=.
-      if test -z "$ac_dots"; then top_srcdir=.
-      else top_srcdir=`echo $ac_dots|sed 's%/$%%'`; fi ;;
-  /*) srcdir="$ac_given_srcdir$ac_dir_suffix"; top_srcdir="$ac_given_srcdir" ;;
-  *) # Relative path.
-    srcdir="$ac_dots$ac_given_srcdir$ac_dir_suffix"
-    top_srcdir="$ac_dots$ac_given_srcdir" ;;
-  esac
-
-  case "$ac_given_INSTALL" in
-  [/$]*) INSTALL="$ac_given_INSTALL" ;;
-  *) INSTALL="$ac_dots$ac_given_INSTALL" ;;
-  esac
-
-  echo creating "$ac_file"
-  rm -f "$ac_file"
-  configure_input="Generated automatically from `echo $ac_file_in|sed 's%.*/%%'` by configure."
-  case "$ac_file" in
-  *Makefile*) ac_comsub="1i\\
-# $configure_input" ;;
-  *) ac_comsub= ;;
-  esac
-
-  ac_file_inputs=`echo $ac_file_in|sed -e "s%^%$ac_given_srcdir/%" -e "s%:% $ac_given_srcdir/%g"`
-  sed -e "$ac_comsub
-s%@configure_input@%$configure_input%g
-s%@srcdir@%$srcdir%g
-s%@top_srcdir@%$top_srcdir%g
-s%@INSTALL@%$INSTALL%g
-" $ac_file_inputs | (eval "$ac_sed_cmds") > $ac_file
-fi; done
-rm -f conftest.s*
-
-
-
-exit 0
