@@ -269,7 +269,7 @@ struct signon {
 #define TYPE_SIGNOFF   4
 #define TYPE_KEEPALIVE 5
 
-#define REVISION "gaim:$Revision: 10 $"
+#define REVISION "gaim:$Revision: 19 $"
 #define FLAPON "FLAPON\r\n\r\n"
 
 #define ROAST "Tic/Toc"
@@ -284,6 +284,7 @@ struct signon {
 
 
 #ifdef USE_APPLET
+extern gboolean buddy_created;
 extern GtkWidget *applet;
 #endif /* USE_APPLET */
 
